--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       constructor(){
         super();
         this.state = {
-          auth: {}
+          auth: {},
+          notes: [],
         };
         this.signIn = this.signIn.bind(this);
         this.logout = this.logout.bind(this);
@@ -64,7 +65,8 @@
               authorization: token
             }
           });
-          this.setState({ auth: response.data });
+          const notes = await axios.get(`/api/users/${response.data.id}/notes`);
+          this.setState({ auth: response.data, notes: notes.data });
         }
       }
       componentDidMount(){
@@ -77,7 +79,7 @@
         this.attemptTokenLogin();
       }
       render(){
-        const { auth } = this.state;
+        const { auth, notes } = this.state;
         const { signIn, logout } = this;
         if(!auth.id){
           return <SignIn signIn={ signIn }/>
@@ -86,6 +88,9 @@
           return (
             <div>
               Welcome { auth.username }
+              <ul>
+              {notes.map(note => (<li key={note.id}>{note.text}</li>))}
+              </ul>
               <button onClick={ logout }>Logout</button>
             </div>
           );
